plugins {
    id 'org.springframework.boot' version '2.7.12'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
    id 'groovy'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    mavenLocal()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'com.azure.resourcemanager:azure-resourcemanager-storage:2.20.0'
    implementation 'com.azure:azure-identity:1.7.0'

    implementation 'org.apache.commons:commons-lang3:3.12.0'


    //implementation 'no.fintlabs:flais-operator-starter:0-SNAPSHOT'
    implementation 'no.fintlabs:flais-operator-starter:1.0.0-rc-9'
    testImplementation 'junit:junit:4.13.1'
    annotationProcessor 'io.fabric8:crd-generator-apt:6.2.0'

    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.3-groovy-3.0'
    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:4.8.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('copyResourceDefinition', Copy) {
    from "$buildDir/classes/java/main/META-INF/fabric8/azureblobcontainers.fintlabs.no-v1.yml"
    into "$projectDir/kustomize/base"
    from "$buildDir/classes/java/main/META-INF/fabric8/azurefileshares.fintlabs.no-v1.yml"
    into "$projectDir/kustomize/base"
}

tasks.named("build") { finalizedBy("copyResourceDefinition") }

tasks.named("clean") {
    doLast {
        project.delete("$projectDir/kustomize/base/azureblobcontainers.fintlabs.no-v1.yml")
        project.delete("$projectDir/kustomize/base/azurefileshares.fintlabs.no-v1.yml")
    }
}
